@@ -1,1 +1,2 @@
+/* We do not have a floating point implementation.  */
 #define FPE 0
